versioned_docs/version-2.8/reference/targets/python_distribution.mdx
---
title: python_distribution
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A publishable Python setuptools distribution (e.g. an sdist or wheel).

See https://www.pantsbuild.org/v2.8/docs/python-distributions.

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedependenciescode}
</div>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;].

Alternatively, you may include file names. Pants will find which target owns that file, and create a new target from that which only includes the file in its `sources` field. For files relative to the current BUILD file, prefix with `./`; otherwise, put the full path, e.g. [&#x27;./sibling.txt&#x27;, &#x27;resources/demo.json&#x27;].

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeentry_pointscode}
</div>

## `entry_points`

<Field
    type_repr={`Dict[str, Dict[str, str]] | None`}
    default_repr={`None`}
>

Any entry points, such as `console_scripts` and `gui_scripts`.

Specify as a nested dictionary, with a dictionary for each type of entry point, e.g. `console_scripts` vs. `gui_scripts`. Each dictionary maps the entry point name to either a setuptools entry point (&#x22;path.to.module:func&#x22;) or a Pants target address to a pex_binary target.

Example:

```
entry_points={
  "console_scripts": {
    "my-script": "project.app:main",
    "another-script": "project/subdir:pex_binary_tgt"
  }
}
```

Note that Pants will assume that any value that either starts with `:` or has `/` in it, is a target address to a pex_binary target. Otherwise, it will assume it's a setuptools entry point as defined by https://packaging.python.org/specifications/entry-points/#entry-points-specification. Use `//` as a prefix for target addresses if you need to disambiguate.

Pants will attempt to infer dependencies, which you can confirm by running:

```
./pants dependencies <python_distribution target address>

```

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeprovidescode}
</div>

## `provides`

<Field
    type_repr={`PythonArtifact`}
    default_repr={`None`}
>

The setup.py kwargs for the external artifact built from this target.

You must define `name`. You can also set almost any keyword argument accepted by setup.py in the `setup()` function: (https://packaging.python.org/guides/distributing-packages-using-setuptools/#setup-args).

See https://www.pantsbuild.org/v2.8/docs/plugins-setup-py for how to write a plugin to dynamically generate kwargs.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegenerate_setupcode}
</div>

## `generate_setup`

<Field
    type_repr={`bool | None`}
    default_repr={`None`}
>

Whether to generate setup information for this distribution, based on analyzing sources and dependencies. Set to False to use existing setup information, such as existing setup.py, setup.cfg, pyproject.toml files or similar.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codewheelcode}
</div>

## `wheel`

<Field
    type_repr={`bool`}
    default_repr={`True`}
>

Whether to build a wheel for the distribution.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesdistcode}
</div>

## `sdist`

<Field
    type_repr={`bool`}
    default_repr={`True`}
>

Whether to build an sdist for the distribution.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codewheel_config_settingscode}
</div>

## `wheel_config_settings`

<Field
    type_repr={`Dict[str, Iterable[str]] | None`}
    default_repr={`None`}
>

PEP-517 config settings to pass to the build backend when building a wheel.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesdist_config_settingscode}
</div>

## `sdist_config_settings`

<Field
    type_repr={`Dict[str, Iterable[str]] | None`}
    default_repr={`None`}
>

PEP-517 config settings to pass to the build backend when building an sdist.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codepypi_repositoriescode}
</div>

## `pypi_repositories`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

List of PyPi repositories to publish the target package to.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_twinecode}
</div>

## `skip_twine`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, don&#x27;t publish this target&#x27;s packages using Twine.

</Field>

</span>
